enhance IDE and API with opencv and flatlaf